Revision history for {{$dist->name}}

{{$NEXT}}

0.002     2019-12-22 13:08:58+11:00 Australia/Melbourne
- Update for Prometheus::Tiny 0.004 internals changes, including timestamp and
  histogram support

0.001     2018-07-27 23:25:50+10:00 Australia/Melbourne