@@ -1,44 +1,108 @@
 package Prometheus::Tiny::Shared;
 
-# ABSTRACT: A tiny Prometheus client backed by a shared memory region
+# ABSTRACT: A tiny Prometheus client with a shared database behind it
 
 use warnings;
 use strict;
 
 use Prometheus::Tiny 0.004;
 use parent 'Prometheus::Tiny';
-use Cache::FastMmap;
+
+use DBI;
+use DBD::SQLite;
+use Sereal qw(encode_sereal decode_sereal);
 
 sub new {
   my ($class, %args) = @_;
-  my $cache_args = delete $args{cache_args} || {};
+
+  my $filename = delete $args{filename} // ':memory:';
+
   my $self = $class->SUPER::new(%args);
-  $self->{cache} = Cache::FastMmap->new(%$cache_args);
+
+  $self->{dbh} = DBI->connect(
+                    "dbi:SQLite:dbname=$filename", "", "",
+                    { RaiseError => 1, AutoCommit => 1 },
+  );
+
+  $self->{dbh}->do(<<SQL);
+    CREATE TABLE IF NOT EXISTS pts_store (
+      name TEXT NOT NULL,
+      labels TEXT NOT NULL,
+      value TEXT NOT NULL,
+      timestamp INTEGER,
+      PRIMARY KEY (name, labels)
+    );
+SQL
+
+  $self->{dbh}->do(<<SQL);
+    CREATE TABLE IF NOT EXISTS pts_meta (
+      name TEXT NOT NULL PRIMARY KEY,
+      meta BLOB NOT NULL
+    );
+SQL
+
   return $self;
+}
+
+sub DESTROY {
+  my ($self) = @_;
+  $self->{dbh}->disconnect;
 }
 
 sub set {
   my ($self, $name, $value, $labels, $timestamp) = @_;
-  $self->{cache}->set(
-    join('-', 'k', $name, $self->_format_labels($labels)),
-    [ $value, $timestamp ]
-  );
+
+  my $sth = $self->{dbh}->prepare_cached(<<SQL);
+    REPLACE INTO pts_store
+      (name, labels, value, timestamp)
+    VALUES
+      (?, ?, ?, ?);
+SQL
+
+  $sth->execute($name, $self->_format_labels($labels), $value, $timestamp);
+
   return;
 }
 
 sub add {
   my ($self, $name, $value, $labels) = @_;
-  $self->{cache}->get_and_set(
-    join('-', 'k', $name, $self->_format_labels($labels)),
-    # backcompat, before 0.003 value was scalar, in 0.003 its a [value,timestamp] array
-    sub { [ $value + ((ref $_[1] ? $_[1][0] : $_[1]) || 0), undef ] }
-  );
+
+  # UPSERT would be better here, but not available in older SQLites
+
+  my $insert_sth = $self->{dbh}->prepare_cached(<<SQL);
+    INSERT OR IGNORE INTO pts_store
+      (name, labels, value)
+    VALUES
+      (?, ?, 0);
+SQL
+  my $update_sth = $self->{dbh}->prepare_cached(<<SQL);
+    UPDATE pts_store
+    SET value = value + ?
+    WHERE name = ? AND labels = ?;
+SQL
+
+  my $fmt = $self->_format_labels($labels);
+
+  $self->{dbh}->begin_work;
+  $insert_sth->execute($name, $fmt);
+  $update_sth->execute($value, $name, $fmt);
+  $self->{dbh}->commit;
+
   return;
 }
 
 sub declare {
   my ($self, $name, %meta) = @_;
-  $self->{cache}->get_and_set(join('-', 'm', $name), sub { \%meta });
+
+  my $sth = $self->{dbh}->prepare_cached(<<SQL);
+    REPLACE INTO pts_meta
+      (name, meta)
+    VALUES
+      (?, ?);
+SQL
+
+  $sth->execute($name, encode_sereal(\%meta));
+
   return;
 }
 
@@ -46,7 +110,16 @@ sub histogram_observe {
   my $self = shift;
   my ($name) = @_;
 
-  $self->{meta}{$name} = $self->{cache}->get(join('-', 'm', $name));
+  my $sth = $self->{dbh}->prepare_cached(<<SQL);
+    SELECT meta FROM pts_meta
+    WHERE name = ?;
+SQL
+
+  $sth->execute($name);
+  my ($meta) = $sth->fetchrow_array;
+  $sth->finish;
+
+  $self->{meta}{$name} = decode_sereal($meta) if $meta;
 
   return $self->SUPER::histogram_observe(@_);
 }
@@ -54,18 +127,30 @@ sub histogram_observe {
 sub format {
   my $self = shift;
 
-  my @cache_data = $self->{cache}->get_keys(2);
   my (%metrics, %meta);
-  for my $cache_item (@cache_data) {
-    my ($k, $v) = @{$cache_item}{qw(key value)};
-    my ($t, $name, $fmt) = split '-', $k, 3;
-    if ($t eq 'k') {
-      $metrics{$name}{$fmt} = $v;
-    }
-    else {
-      $meta{$name} = $v;
-    }
+
+  my $metrics_sth = $self->{dbh}->prepare_cached(<<SQL);
+    SELECT name, labels, value, timestamp FROM pts_store;
+SQL
+
+  $metrics_sth->execute;
+  for my $row ($metrics_sth->fetchall_arrayref->@*) {
+    my ($name, $labels, $value, $timestamp) = @$row;
+    $metrics{$name}{$labels} = [ $value, $timestamp ];
   }
+  $metrics_sth->finish;
+
+  my $meta_sth = $self->{dbh}->prepare_cached(<<SQL);
+    SELECT name, meta FROM pts_meta;
+SQL
+
+  $meta_sth->execute;
+  for my $row ($meta_sth->fetchall_arrayref->@*) {
+    my ($name, $meta) = @$row;
+    $meta{$name} = decode_sereal($meta);
+  }
+  $meta_sth->finish;
+
   $self->{metrics} = \%metrics;
   $self->{meta} = \%meta;
 
@@ -94,7 +179,7 @@ Prometheus::Tiny - A tiny Prometheus client backed by a shared memory region
 
 =head1 DESCRIPTION
 
-C<Prometheus::Tiny::Shared> is a wrapper around L<Prometheus::Tiny> that instead of storing metrics data in a hashtable, stores them in a shared memory region (provided by L<Cache::FastMmap>). This lets you keep a single set of metrics in a multithreaded app.
+C<Prometheus::Tiny::Shared> is a wrapper around L<Prometheus::Tiny> that instead of storing metrics data in a hashtable, stores them in a shared database (provided by SQLite, though this may change in the future). This lets you keep a single set of metrics in a multithreaded app.
 
 C<Prometheus::Tiny::Shared> should be a drop-in replacement for C<Prometheus::Tiny>. Any differences in behaviour is a bug, and should be reported.
 
@@ -102,9 +187,11 @@ C<Prometheus::Tiny::Shared> should be a drop-in replacement for C<Prometheus::Ti
 
 =head2 new
 
-    my $prom = Prometheus::Tiny::Shared->new(cache_args => { ... })
+    my $prom = Prometheus::Tiny::Shared->new(filename => ...);
 
-C<cache_args> will be passed on to the C<Cache::FastMmap> constructor. If not provided, C<Cache::FastMmap>'s defaults will be used, but that's probably not what you want. At the very least you should read the discussion of C<share_file> and C<init_file> in L<Cache::FastMmap>.
+C<filename>, if provided, will name an on-disk file to use as the backing store. If not supplied, an in-memory store will be used, which is suitable for testing purposes.
+
+The in-memory store (and indeed, the entire Prometheus::Tiny::Shared object) is NOT safe across forks; if you fork you need to create a new object with the filename for the backing store supplied.
 
 =head1 SUPPORT
 
